canvas for chat pattern

--- a/src/comps/styles/styles.css
+++ b/src/comps/styles/styles.css
@@ -152,17 +152,17 @@ form#absy_form_package input[type="range"]:focus::-moz-range-thumb {
 
 /* CHECKBOX */
 
-form .absy_ppk_checkbox {
+form .absy_pkg_checkbox {
   visibility: hidden;
   margin-top: 10px;
 }
 
-form .absy_ppk_checkbox + label {
+form .absy_pkg_checkbox + label {
   position: relative;
   padding-left: 5px;
 }
 
-form .absy_ppk_checkbox + label::before {
+form .absy_pkg_checkbox + label::before {
   position: absolute;
   left: -20px;
   top: 4px;
@@ -174,7 +174,7 @@ form .absy_ppk_checkbox + label::before {
   transition: all 0.1s ease-in, border-color 0.05s ease-in;
 }
 
-form .absy_ppk_checkbox:checked + label::before {
+form .absy_pkg_checkbox:checked + label::before {
   transform: rotate(40deg);
   border-top-color: transparent;
   border-left-color: transparent;
